--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rvcg (0.15-trusty1) trusty; urgency=medium
+
+  * CRAN release
+
+ -- Stefan Schlager <zarquon42@gmail.com>  Tue, 28 Mar 2017 14:38:55 +0200
+
 rvcg (0.14-trusty1) trusty; urgency=medium
 
   * CRAN update
